--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   		<div class="container pt-3">
   			<div class="row pb-3 text-center">
   		  			<a class="col-lg-4" href="#">
-	  					<img src="image/brotherhood_logo.png" alt="brotherhood">
+	  					<img class="logo" src="image/brotherhood_logo.png" alt="brotherhood">
 	  				</a>
 <!-- language-->
 	  				<ul class="col-sm-6 col-lg-3  offset-lg-1 pt-4 pt-lg-0 row justify-content-center justify-content-lg-start active_lang pr-0">
@@ -83,7 +83,7 @@
   		<section class="container-fluid section1 pl-0 pr-0">
   			<div class="container pt-4 text-left position-relative">
   				<div class="row">
-		  			<div class=" col-md-6 col-xl-4 my_content_section_1 pr-0 pt-5 pb-5">
+		  			<div class=" col-md-6 col-xl-4 my_content_section_1 pt-5 pb-5">
 						<h2>
 		  					<p>Серія</p>
 		  					<p>Tactical</p>
@@ -92,7 +92,7 @@
 		  				<ul class="my_ul pt-4 pb-4 pl-0">
 		  					<li>якість тканин і пошиву</li>
 		  					<li>зручність крою</li>
-		  					<li>функціональність у використанні</li>
+		  					<li>функціональність <span class="d-none d-md-inline">у використанні</span></li>
 		  				</ul>
 		  				<a class="text-decoration-none pb-1 pr-2" href="#">Перейти до каталогу</a>
 		  			</div>
@@ -205,10 +205,29 @@
 	  	</section>
 	  	<section class="container-fluid section_6 p-0">
 	  		<div class="container">
-	  			<h2 class="text-uppercase pt-5">Наші дилери</h2>
+	  			<h2 class="text-uppercase pt-5 pb-2 mb-0">Наші дилери</h2>
 	  		</div>	
 	  		<div id="map"></div>
 	  	</section>
+	  	<footer class="container-fluid p-0">
+	  		<div class="container">
+	  			<div class="row pt-3 pb-5">
+	  				<a class="col-12 col-xl-4 mt-xl-5 text-center pb-5 pb-xl-0" href="#">
+	  					<img class="logo" src="image/brotherhood_logo.png" alt="brotherhood">
+	  				</a>
+	  				<div class="col-12 col-md-6 col-xl-4 offset-xl-1 mt-xl-3 text-center text-xl-left in_footer_1">
+	  					<a class="text-decoration-none" href="#">sales@brother-hood.com.ua</a>
+	  					<p class="m-0">ст. м “Либідська”</p>
+	  					<p class="m-0">м. Київ, вул. К. Малевича, 86 І</p>
+	  				</div>
+	  				<div class="col-12 col-md-6 col-xl-3 mt-xl-3 pt-5 pt-md-0 p-xl-0 text-center text-xl-left in_footer_2">
+	  					<a class="text-decoration-none" href="">Замовити зворотнiй дзвiнок</a>
+	  					<p class="m-0">+38 (050)<span> 317-64-44</span></p>
+	  					<p class="m-0">+38 (067)<span> 325-57-53</span></p>
+	  				</div>
+	  			</div>
+	  		</div>
+	  	</footer>
 	  		<ul class="position-fixed my_ul_style_2 d-none d-lg-block">
 	  			<li class="number"><a href="#"></a></li>
 	  			<li class="discount"><a href="#"></a></li>
