--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="uk">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -31,15 +31,17 @@
 	  					<li><a class="text-decoration-none" href="#">Укр</a></li>
 	  					<li><a class="text-decoration-none" href="#">Eng</a></li>
 	  				</ul>
-<!-- basket	  				 -->
+<!-- basket	  -->
 					<div class="col-sm-6 col-lg-3  offset-xl-1 basket_parent">
-	  					<a class="text-decoration-none  basket" href="#"><span></span><span class="bold">Кошик</span><span class="d-none d-lg-inline">: 27 товарiв</span></span></a>
+	  					<a class="text-decoration-none  basket" href="#">
+	  						<span class="bold">Кошик</span><span class="d-none d-xl-inline">: 27 товарiв</span>
+	  					</a>
 	  				</div>	
   			</div>
   			
   
 <!-- nav -->
-			<nav class="navbar navbar-expand-md navbar-dark p-0">
+			<nav class="navbar navbar-expand-md navbar-dark p-0 pb-3">
 				<button class="navbar-toggler text-white" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
@@ -67,13 +69,18 @@
 				    </ul>				    
 				  </div>
 				 
-			</nav>
-			
-	<!-- active			 -->
-			<ul class="col-lg-6 row text-decoration-none text-center active_header">
-	  			<li class="col-sm-4"><a href="#">tactical</a></li>
-	  			<li class="col-sm-4"><a href="#">highland</a></li>
-	  			<li class="col-sm-4"><a href="#">simple</a></li>
+			</nav>			
+<!-- active	-->
+	  		<ul class="col-lg-6 row text-decoration-none text-center active_header" id="navbarNav">
+	  			<li class="col-sm-4">
+	  				<a class="active" href="#">tactical</a>
+	  			</li>
+	  			<li class="col-sm-4">
+	  				<a href="#">highland</a>
+	  			</li>
+	  			<li class="col-sm-4">
+	  				<a href="#">simple</a>
+	  			</li>
 	  		</ul>
   		</div>
   	</header>
@@ -85,8 +92,8 @@
   				<div class="row">
 		  			<div class=" col-md-6 col-xl-4 my_content_section_1 pt-5 pb-5">
 						<h2>
-		  					<p>Серія</p>
-		  					<p>Tactical</p>
+		  					<span>Серія</span>
+		  					<span>Tactical</span>
 		  				</h2>	
 		  				<p class="pt-4"><span class="bold_open_sans">Власна розробка</span> українських військових, що увібрала в себе <span class="bold_open_sans">найкраще</span> з нині можливого:</p>
 		  				<ul class="my_ul pt-4 pb-4 pl-0">
@@ -228,11 +235,18 @@
 	  			</div>
 	  		</div>
 	  	</footer>
-	  		<ul class="position-fixed my_ul_style_2 d-none d-lg-block">
-	  			<li class="number"><a href="#"></a></li>
-	  			<li class="discount"><a href="#"></a></li>
-	  			<li class="e_mail"><a href="#"></a></li>
-	  		</ul>
+	  	<div class="symbol">
+	  		<div class="in_symbol">
+	  				<p>Замовити зворотнiй дзвiнок</p>
+	  				<p>Мiняємо Ваш e-mail на знижку або подарунок</p>
+	  				<p>sales@brother-hood.com.ua</p>
+	  		</div>
+			  	<ul class="position-fixed my_ul_style_2 d-none d-lg-block">
+			  		<li class="number"><a href="#"></a></li>
+			  		<li class="discount"><a href="#"></a></li>
+			  		<li class="e_mail"><a href="#"></a></li>
+			  	</ul>
+	  	</div>
   	</main>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDR8P72HMX3zllKeeZt8X89dJWMEu0LSX8&callback=myMap" async defer></script>
     <!-- Optional JavaScript -->
@@ -246,226 +260,7 @@
     <!-- User scripts -->
     <script src="script/main.js"></script>
     <script>
-// Initialize and add the map
-function initMap() {
-  // The location of Uluru
-  var uluru = {lat: 50.460559, lng: 30.517322};
-  // The map, centered at Uluru
-  var map = new google.maps.Map(
-      document.getElementById('map'), {zoom: 6, center: uluru, styles: [
-  {
-    "elementType": "geometry",
-    "stylers": [
-      {
-        "color": "#212121"
-      }
-    ]
-  },
-  {
-    "elementType": "labels.icon",
-    "stylers": [
-      {
-        "visibility": "off"
-      }
-    ]
-  },
-  {
-    "elementType": "labels.text.fill",
-    "stylers": [
-      {
-        "color": "#757575"
-      }
-    ]
-  },
-  {
-    "elementType": "labels.text.stroke",
-    "stylers": [
-      {
-        "color": "#212121"
-      }
-    ]
-  },
-  {
-    "featureType": "administrative",
-    "elementType": "geometry",
-    "stylers": [
-      {
-        "color": "#757575"
-      }
-    ]
-  },
-  {
-    "featureType": "administrative.country",
-    "elementType": "labels.text.fill",
-    "stylers": [
-      {
-        "color": "#9e9e9e"
-      }
-    ]
-  },
-  {
-    "featureType": "administrative.land_parcel",
-    "stylers": [
-      {
-        "visibility": "off"
-      }
-    ]
-  },
-  {
-    "featureType": "administrative.locality",
-    "elementType": "labels.text.fill",
-    "stylers": [
-      {
-        "color": "#bdbdbd"
-      }
-    ]
-  },
-  {
-    "featureType": "poi",
-    "elementType": "labels.text.fill",
-    "stylers": [
-      {
-        "color": "#757575"
-      }
-    ]
-  },
-  {
-    "featureType": "poi.park",
-    "elementType": "geometry",
-    "stylers": [
-      {
-        "color": "#181818"
-      }
-    ]
-  },
-  {
-    "featureType": "poi.park",
-    "elementType": "labels.text.fill",
-    "stylers": [
-      {
-        "color": "#616161"
-      }
-    ]
-  },
-  {
-    "featureType": "poi.park",
-    "elementType": "labels.text.stroke",
-    "stylers": [
-      {
-        "color": "#1b1b1b"
-      }
-    ]
-  },
-  {
-    "featureType": "road",
-    "stylers": [
-      {
-        "visibility": "off"
-      }
-    ]
-  },
-  {
-    "featureType": "road",
-    "elementType": "geometry.fill",
-    "stylers": [
-      {
-        "color": "#2c2c2c"
-      }
-    ]
-  },
-  {
-    "featureType": "road",
-    "elementType": "labels.text.fill",
-    "stylers": [
-      {
-        "color": "#8a8a8a"
-      }
-    ]
-  },
-  {
-    "featureType": "road.arterial",
-    "elementType": "geometry",
-    "stylers": [
-      {
-        "color": "#373737"
-      }
-    ]
-  },
-  {
-    "featureType": "road.highway",
-    "elementType": "geometry",
-    "stylers": [
-      {
-        "color": "#3c3c3c"
-      }
-    ]
-  },
-  {
-    "featureType": "road.highway.controlled_access",
-    "elementType": "geometry",
-    "stylers": [
-      {
-        "color": "#4e4e4e"
-      }
-    ]
-  },
-  {
-    "featureType": "road.local",
-    "elementType": "labels.text.fill",
-    "stylers": [
-      {
-        "color": "#616161"
-      }
-    ]
-  },
-  {
-    "featureType": "transit",
-    "elementType": "labels.text.fill",
-    "stylers": [
-      {
-        "color": "#757575"
-      }
-    ]
-  },
-  {
-    "featureType": "water",
-    "elementType": "geometry",
-    "stylers": [
-      {
-        "color": "#000000"
-      }
-    ]
-  },
-  {
-    "featureType": "water",
-    "elementType": "labels.text.fill",
-    "stylers": [
-      {
-        "color": "#3d3d3d"
-      }
-    ]
-  }
-]});
 
-  // The marker, positioned at Uluru
-  var kha = {lat: 50.007089, lng: 36.225469}
-  var marker = new google.maps.Marker({
-  	position: kha,
-  	map: map,
-  	icon: {
-			url: "image/icon_map.png",
-		}
-  	});
-
-  	var kyiv = {lat: 50.447884, lng: 30.514791}
-  	var marker = new google.maps.Marker({
-  	position: kyiv,
-  	map: map,
-  	icon: {
-			url: "image/icon_map.png",
-		}
-  	});
-}
     </script>
     <!--Load the API from the specified URL
     * The async attribute allows the browser to render the page while the API loads
@@ -478,56 +273,3 @@ function initMap() {
   </body>
 </html>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- <div class="container">
-  		<div class="row">
-  			<div class="col-10 offset-1 col-sm-8 offset-sm-2 col-md-6 offset-md-0 col-lg-4 col-xl-3">
-  				<div class="lime">Lorem ipsum dolor sit amet.</div>
-  			</div>
-  			<div class="col-10 offset-1 col-sm-8 offset-sm-2 col-md-6 offset-md-0 col-lg-4 col-xl-3">
-  				<div class="lime">Lorem ipsum dolor sit amet.</div>
-  			</div>
-  			<div class="col-10 offset-1 col-sm-8 offset-sm-2 col-md-6 offset-md-0 col-lg-4 col-xl-3">
-  				<div class="lime">Lorem ipsum dolor sit amet.</div>
-  			</div>
-  			<div class="col-10 offset-1 col-sm-8 offset-sm-2 col-md-6 offset-md-0 col-lg-4 col-xl-3">
-  				<div class="lime">Lorem ipsum dolor sit amet.</div>
-  			</div>
-  			<div class="col-10 offset-1 col-sm-8 offset-sm-2 col-md-6 offset-md-0 col-lg-4 col-xl-3">
-  				<div class="lime">Lorem ipsum dolor sit amet.</div>
-  			</div>
-  			<div class="col-10 offset-1 col-sm-8 offset-sm-2 col-md-6 offset-md-0 col-lg-4 col-xl-3">
-  				<div class="lime">Lorem ipsum dolor sit amet.</div>
-  			</div>
-  			<div class="col-10 offset-1 col-sm-8 offset-sm-2 col-md-6 offset-md-0 col-lg-4 col-xl-3">
-  				<div class="lime">Lorem offset-sm-2 ipsum do offset-md-0lor sit amet.</div>
-  			</div>
-  			<div class="col-10 offset-1 col-sm-8 offset-sm-2 col-md-6 offset-md-0 col-lg-4 col-xl-3">
-  				<div class="lime">Lorem ipsum dolor sit amet.</div>
-  			</div>
-  			<div class="col-10 offset-1 col-sm-8 offset-sm-2 col-md-6 offset-md-0 col-lg-4 col-xl-3">
-  				<div class="lime">Lorem ipsum dolor sit amet.</div>
-  			</div>
-  			<div class="col-10 offset-1 col-sm-8 offset-sm-2 col-md-6 offset-md-0 col-lg-4 col-xl-3">
-  				<div class="lime">Lorem ipsum dolor sit amet.</div>
-  			</div>
-  			<div class="col-10 offset-1 col-sm-8 offset-sm-2 col-md-6 offset-md-0 col-lg-4 col-xl-3">
-  				<div class="lime">Lorem ipsum dolor sit amet.</div>
-  			</div>
-  			<div class="col-10 offset-1 col-sm-8 offset-sm-2 col-md-6 offset-md-0 col-lg-4 col-xl-3">
-  				<div class="lime">Lorem ipsum dolor sit amet.</div>
-  			</div>
-  		</div>	
-  	</div> -->
